--- a/src/styles/board.module.css
+++ b/src/styles/board.module.css
@@ -1,3 +1,4 @@
 .board_wrapper{
     display: flex;
+    width: inherit;
 }
