--- a/src/styles/square.module.css
+++ b/src/styles/square.module.css
@@ -1,6 +1,6 @@
 .square_btn{
     height: 50px;
-    width: 50px;
+    width: 60px;
     font-weight: bolder;
     font-size: large;
 }
